@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-16T16:09:03Z",
-  "count_outdated" : 870,
-  "uniques_outdated" : 47,
-  "count" : 995,
+  "timestamp" : "2022-04-17T00:36:51Z",
+  "count_outdated" : 898,
+  "uniques_outdated" : 48,
+  "count" : 1017,
   "uniques" : 61,
   "views" : [
-    {
-      "timestamp": "2022-04-02T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 0, 28 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-04-03T00:00:00Z",
       "count": 9,
