@@ -1,3 +1,9 @@
+2022-04-17T00:36:51Z:
+* notice: last 14d: all unq: 119 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 870 47 / 995 61
+* notice: next accum: outdated-all outdated-unq / all unq: 898 48 / 1017 61
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-16T16:09:03Z:
 * notice: last 14d: all unq: 125 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 870 47 / 1001 61
